# ziad_devweb

./: database_management.py  db.py  my_blog_api.py
devweb/backend/: pyproject.toml
devweb/backend/blog_backend/: blog_api.py  blog_cli.py
devweb/frontend/: package-lock.json  package.json
devweb/frontend/frontend/: package-lock.json  package.json
devweb/frontend/frontend/src/: App.css  App.tsx
devweb/frontend/frontend/src/components/: Home.tsx  Login.tsx  PostEditor.tsx  Profile.tsx
devweb/frontend/frontend/src/services/: api.ts
